--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 server.port=8082
 spring.datasource.url=jdbc:oracle:thin:@t6fuz3vgkihxccp2_tp?TNS_ADMIN=C:/home/site/wwwroot/Wallet_T6FUZ3VGKIHXCCP2
+#spring.datasource.url=jdbc:oracle:thin:@t6fuz3vgkihxccp2_tp?TNS_ADMIN=/Wallet_T6FUZ3VGKIHXCCP2
 spring.datasource.username=Admin
 spring.datasource.password=OracleCloud123
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
