--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,11 @@
             <version>21.5.0.0</version>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+            <version>3.1.8</version> <!-- Compatible con Spring Boot 2.7.x -->
+        </dependency>
     </dependencies>
 
     <build>
